--- a/_data/l10n/ta.yml
+++ b/_data/l10n/ta.yml
@@ -6,7 +6,7 @@ participation: 'Participation'
 faq: 'ஐயமும் தீர்வும்'
 leaderboard: 'முன்னிலைப் பட்டியல்'
 languages: 'மொழிகள்'
-submit-translation: 'Submit a translation/improvement for this page'
+submit-translation: 'இந்த பக்கத்திற்கான ஒரு மொழிபெயர்ப்பை சமர்ப்பிக்கவும்'
 twitter-text1: 'Twitter-ல் இந்த பக்கத்தை பகிரவும்'
 twitter-text2: 'I am contributing to'
 twitter-text3: 'at %40Mozilla Check how easy it is to %23mozactivate'
