--- a/_data/l10n/ta.yml
+++ b/_data/l10n/ta.yml
@@ -2,7 +2,7 @@ lang-url: 'ta/'
 site-title: 'Activate Mozilla'
 activities: 'செயல்பாடுகள்'
 roadmap: 'திட்ட வரைவு'
-participation: 'Participation'
+participation: 'பங்கேற்பு'
 faq: 'ஐயமும் தீர்வும்'
 leaderboard: 'முன்னிலைப் பட்டியல்'
 languages: 'மொழிகள்'
